--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,8 @@
 [package]
 name = "qr_coder"
 version = "0.1.0"
-authors = ["HOME\\swkfn <sw.kfn4410uec@gmail.com>"]
+authors = ["swkfn <sw.kfn4410uec@gmail.com>"]
+description = "Clap Example CLI ref toml"
 
 [dependencies]
 clap = "2.31"
